--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -3,8 +3,8 @@
   height: 350px;
   display: flex;
   gap: 20px;
- 
-   .fullSlider{
+
+  .fullSlider {
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -12,37 +12,63 @@
     left: 0;
     background-color: black;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-
-    .arrow{
+    .arrow {
       flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      img{
+      img {
         width: 50px;
+
+        &.right {
+          transform: rotate(180deg);
+        }
       }
     }
-    .imgContainer{
+    .imgContainer {
       flex: 10;
-    }
-   }
 
-  img {
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+    }
+
+    .close{
+      position: absolute;
+      top: 0;
+      right: 0;
+      color: white;
+      font-size: 36px;
+      font-weight: bold;
+      padding: 50px;
+      cursor: pointer;
+    }
+  }
+  img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
     cursor: pointer;
   }
-
-  .bigImage {
-    flex: 3;
-  }
-  .smallImages {
+    .bigImage {
+      flex: 3;
+    }
+    .smallImages {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 20px;
+
     img {
       height: 100px;
     }
