--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .Card {
   display: flex;
   gap: 20px;
@@ -13,6 +15,10 @@
       height: 100%;
       object-fit: cover;
       border-radius: 10px;
+
+      @include sm{
+        display: none;
+      }
     }
   }
 
