--- a/src/routes/singlePage/SinglePage.scss
+++ b/src/routes/singlePage/SinglePage.scss
@@ -1,9 +1,26 @@
+@import "/src/responsive.scss";
+
+
 .SinglePage {
   display: flex;
   height: 100%;
 
+
+  @include md{
+    flex-direction: column;
+  overflow: scroll;
+  margin: 20px;
+  }
+    
   .details {
     flex: 3;
+    height: 100%;
+  
+
+    @include md{
+      flex:none;
+      height: max-content;
+    }
 
     .wrapper {
       padding-right: 50px;
@@ -33,13 +50,11 @@
               img {
                 height: 14px;
                 width: 14px;
-                
               }
-               
+
               span {
                 // Add styles for the address text
               }
-
             }
 
             .price {
@@ -49,8 +64,7 @@
               border-radius: 5px;
               font-size: 20px;
               font-weight: 300;
-            
-             }
+            }
           }
 
           .user {
@@ -81,7 +95,9 @@
           margin-top: 50px;
           color: #555;
           line-height: 20px;
-         }
+
+          
+        }
       }
     }
   }
@@ -90,9 +106,105 @@
     flex: 2;
     background-color: #fcf5f3;
 
+    // height: 100%;
+    // overflow-y:scroll ;
+
+
+    @include md{
+      flex:none;
+      height: max-content;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
+
     .wrapper {
       padding: 0 20px;
-      // Add additional styles for features wrapper if needed
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      img {
+        width: 24px;
+        height: 24px;
+      }
+      .title {
+        font-weight: bold;
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      .feature {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          background-color: rgba(254, 205, 81, 0.209);
+        }
+        .featureText {
+          span {
+            font-weight: bold;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+      }
+
+      .listVertical {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 10px;
+        background-color: white;
+        border-radius: 10px;
+      }
+      .listHorizantal {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 10px;
+        background-color: white;
+        border-radius: 10px;
+      }
+      .sizes {
+        display: flex;
+        justify-content: space-between;
+
+
+      @include lg{
+        font-size: 12px;
+      }
+
+        .size {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          background-color: white;
+          padding: 10px;
+          border-radius: 5px;
+        }
+      }
+      .mapContainer {
+        width: 100%;
+        height: 200px;
+      }
+      .buttons {
+        display: flex;
+        justify-content: space-between;
+
+        button {
+          padding: 20px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          background-color: white;
+          border:1px solid #fece51 ;
+          border-radius: 5px;
+          cursor: pointer;
+          img{
+            width: 16px;
+            height: 16px;
+          }
+        }
+      }
     }
   }
 }
