--- a/src/routes/loginPage/LoginPage.scss
+++ b/src/routes/loginPage/LoginPage.scss
@@ -3,14 +3,14 @@
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background-color: #f3f4f6;
+  background-color: white;
+
 }
 
 .login-container {
-  background-color: #ffffff;
+
   padding: 2rem;
   border-radius: 0.375rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 28rem;
 }
@@ -27,16 +27,23 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  span{
+    color: #ff0000;
+    margin-left: 22%;
+  }
 }
 
 .login-input-container {
   margin-bottom: 1rem;
+
+
+
 }
 
 .login-input {
   padding: 0.75rem;
   width: 100%;
-  border: 1px solid #d1d5db;
   border-radius: 0.375rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   transition: border-color 0.2s, box-shadow 0.2s;
