--- a/src/components/filter/Filter.scss
+++ b/src/components/filter/Filter.scss
@@ -1,51 +1,55 @@
-.Filter{
-display: flex;
-flex-direction: column;
-gap: 10px;
-
-h1{
-  font-weight: 300;
-  font-size: 24px;
-}
-.item{
+.filter {
   display: flex;
   flex-direction: column;
-  gap: 2px;
-}
+  gap: 10px;
 
-label{
-  font-size: 10px;
+  h1 {
+    font-weight: 300;
+    font-size: 24px;
+  }
 
-}
-input,select{
-  width: 100px;
-  padding: 10px;
-  border: 1px solid rgb(206, 187, 187);
-  border-radius: 5px;
-  font-size: 15px;
-}
-  .top{
-    input{
+  .item {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+
+    label {
+      font-size: 10px;
+    }
+
+    input,
+    select {
+      width: 100px;
+      padding: 10px;
+      border: 1px solid #e0e0e0;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+  }
+
+  .top {
+    input {
       width: 100%;
     }
   }
-  .bottom{
+
+  .bottom {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
 
-    button{
+    button {
       width: 100px;
       padding: 10px;
       border: none;
-      cursor: pointer; 
+      cursor: pointer;
       background-color: #fece51;
 
-      img{
+      img {
         width: 24px;
         height: 24px;
       }
     }
   }
-
 }
